# analysis_python_assignment_1

./: README.md  pyproject.toml
dev_calc/: calc_matrix.py  mean_var_std.py  pyproject.toml
tests/: test_cals_matrix.py  test_mean_var_std.py
