[tool.poetry]
name = "fcc-mean-var-std"
version = "0.1.0"
description = ""
authors = ["Denise T <denise.turkova@madetech.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "^1.21.0"
pytest = "7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
